# vk_education_made_advanced_cpp

./: README.md  index-sort-f.html  index-sort-l.html  index.html
.github/workflows/: cmake.yml
filter_lib/: filter.c.func-sort-c.html  filter.c.func.html  filter.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html
homework_1/: CMakeLists.txt  header.in.h  main.c
homework_1/filter_lib/: CMakeLists.txt  filter.c  filter.h
homework_1/tests/: CMakeLists.txt  test_filter.cpp
homework_2/: main.cpp
usr/include/x86_64-linux-gnu/bits/: index-sort-f.html  index-sort-l.html  index.html  stdio2.h.func-sort-c.html  stdio2.h.func.html  stdio2.h.gcov.html
